# SimMLB

./: .env.example  .gitignore  README.md  create_tables.py  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  daily_pipeline.yml
config/: park_factors.json  settings.py
data/raw/: bref_batting_2023.csv  bref_batting_2024.csv  bref_batting_2025.csv  bref_dwar_master.csv  bref_fielding_2023.csv  bref_fielding_2024.csv  bref_fielding_2025.csv  bref_pitching_2023.csv  bref_pitching_2024.csv  bref_pitching_2025.csv  park_factors.csv  park_factors.json  park_factors_latest.csv
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
migrations/: env.py
migrations/versions/: 140ec83bcd4a_initial_schema.py  4fb0b416e598_add_game_date_to_lineups_and_xwoba_to_.py  a1b2c3d4e5f6_live_states_and_postgame_columns.py
models/: calibrator_v1.pkl  calibrator_v2.pkl  lgbm_v1.pkl  lgbm_v2.pkl  xgb_v1.pkl  xgb_v2.pkl
scripts/: backfill_historical.py  backfill_lineups.py  build_and_train.py  build_and_train_v2.py  export_csv.py  fix_player_stubs.py  run_daily_inference.py  run_inference_v2.py  run_inference_v3.py  update_dwar.py  verify_data_integrity.py
src/api/: auth.py  main.py
src/collector/: base.py  bref_scraper.py  fangraphs_collector.py  live_feed_client.py  live_score_poller.py  mlb_statsapi_client.py  (+6 more)
tests/: test_bref_features_v2.py  test_bref_scraper.py  test_features.py  test_live_feed_client.py  test_live_score_poller.py  test_live_win_prob.py  test_llm.py  test_postgame_collector.py  test_update_dwar.py
(+33 files in other folders)
