[tool.poetry]
name = "mlb-prediction"
version = "0.1.0"
description = "MLB 경기 승부 예측 AI 시스템"
authors = ["MLB Prediction Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# DB
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
pydantic-settings = "^2.0"
# Cache
redis = {extras = ["asyncio"], version = "^5.0"}
# Scheduler
apscheduler = "^3.10"
# ML
lightgbm = "^4.3"
xgboost = "^2.0"
scikit-learn = "^1.4"
shap = "^0.45"
optuna = "^3.5"
# Data
pandas = "^2.0"
numpy = "^1.26"
pybaseball = "^2.2"
pyarrow = "^15.0"
# API
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.27"}
httpx = "^0.27"
# LLM
openai = "^1.0"
# Async HTTP
aiohttp = "^3.9"
tenacity = "^8.2"
# Monitoring
sentry-sdk = {extras = ["fastapi"], version = "^2.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
mypy = "^1.9"
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
